# AMPAPI_Python

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  TODO.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  changelog.yml  test.yml
.github/workflows/scripts/: gen_changelog.py  setup.py
ampapi/: __init__.py  ads.py  adsmodule.py  analytics.py  backoff.py  base.py  bridge.py  controller.py  core.py  dataclass.py  emailsender.py  enums.py  enums_.py  filebackup.py  filemanager.py  instance.py  minecraft.py  modules.py  types.py  types_.py  util.py
ampapi/docstring/template/: numpy-overwrite.mustache
ampinstances/: ads.py  instance.py
docs/: ADS_api_spec.md  Minecraft_api_spec.md  conf.py  docs.rst  index.rst  instances.rst  modules.rst  requirements.txt  types.rst
docs/_static/styles/: furo.css
docs/api_spec_sheets/: ADS_api_spec.md  Minecraft_api_spec.md
docs/events/: method_events.rst  trigger_events.rst
docs/extensions/enum_tools/: autoenum.py  documentation.py  utils.py
docs/nodes/: permission_nodes.rst  setting_nodes.rst
docs/samples/: GetInstances.json  method_event_usage.py  permission_node_usage.py  sample.py  settings_node_usage.py  trigger_event_usage.py
